Tue Jul 16 03:23:03 2013  Zachary Scott  <e@zzak.io>

	* numeric.c: [DOC] improve rdoc formatting for parameters and links

Mon Jul 15 14:40:00 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_big2str0): Deprecated.

	* bignum.c (rb_big2str1): Renamed from rb_big2str0.
	  (rb_big2str0): Deprecated wrapper for rb_big2str1.
	  (rb_big2str): Invoke rb_big2str1 instead of rb_big2str0.

Mon Jul 15 14:13:02 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* struct.c (rb_struct_each_pair): use rb_yield_values(2, key, value)
	  instead of rb_yield(rb_assoc_new(key, value)) if rb_block_arity()
	  is greater than 1.

Mon Jul 15 13:46:26 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Add static assertions.

Mon Jul 15 13:36:02 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_each_pair): performance improvement by using
	  rb_block_arity().

Mon Jul 15 13:15:37 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* proc.c (rb_block_arity): create internal API rb_block_arity().
	  it returns arity of given block.

Mon Jul 15 13:07:27 2013  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* lib/prime.rb (Prime::EratosthenesGenerator,
	  Prime::EratosthenesSieve): New implementation by
	  robertjlooby <robertjlooby AT gmail.com>.

	* test/test_prime.rb: updated with new method name

Mon Jul 15 11:32:46 2013  Zachary Scott  <e@zzak.io>

	* numeric.c (rb_cNumeric): [DOC] Added comment for Numeric to fix doc

Mon Jul 15 11:24:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit_dbl): Useless #if removed.

Mon Jul 15 11:10:46 2013  Zachary Scott  <e@zzak.io>

	* bignum.c (rb_big_coerce): [DOC] Add docs for Bignum#coerce
	  Based on patch by Juanito Fatas [Fixes GH-360]
	  https://github.com/ruby/ruby/pull/360

Mon Jul 15 10:56:01 2013  Zachary Scott  <e@zzak.io>

	* thread.c (mutex_sleep): [DOC] Awake thread will reacquire lock
	  By Tim Abdulla [Fixes GH-342] https://github.com/ruby/ruby/pull/342
